...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_register"
            android:text = "@string/Register_CreateAccount"
            android:textSize = "11sp"
            android:background="@drawable/continue_button"
            android:layout_marginStart="240dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"/>
...
